# NNDAP

./: .gitignore  README.md  ingrid_farm.db  pyproject.toml  testing.rest
farm_api/: api.py  helper.py
farm_api/models/: cow.py
farm_api/resources/: cows_resource.py
tests/integration/: conf_test.py  cow_test.py
