[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "nnd_farm"
version = "0.0.1"
authors = [
  { name="Esther Adenekan", email="essietom@gmail.com" },
]
description = "Ingrid farm package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Essietom/NNDAP"
